style.css
body {
    font-family: Arial, sans-serif;
    background-color: #D1C8BD;
    margin: 0;
    padding: 0;
}

.container {
    max-width: 200px;
    margin: 0 auto;
    padding: 20px;
    background-color: #D1C8BD;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    height: 300px;
    border-radius: 20px;
    margin-top: 150px;
}

.navbar {
    background-color: #d2d1cf;
    height: 130px;
    width: 110%;
    display:inline-block;
    vertical-align: center;
}
.icon-container {
    width: 100px;  
    height: 70px; 
    color: rgb(12, 12, 12);   
    position: relative;
    margin-top: -10px;
    margin-right: 100px;
  }
  

.Paragraph1 {
    text-align: right;
    margin-right: 7%;
    margin-top: -30px;
    text-align: center;
}

h1 {
    text-align: center;
    padding-top: -100px;
    right: -10;
    
}
.navbar-brand  mb-3 h1{
    margin-top: -10px;
    padding-top: -20px;
}



button {
    width: 100%;
    padding: 10px;
    margin-bottom: 20px;
    border: 2px solid #0b0808;
    border-radius: 4px;
}


img{
    margin-right: -310px;
    margin-top: -115px;
}
.button-text{
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
    margin-left: -10px;

}
.text-right{
    position: absolute;
    top: 125;
    right: 80;
   

}
.text-right1{
    position: absolute;
    top: 225;
    right: 50;


}
.text-right2{
    position: absolute;
    top: 325;
    right: 50;
    
}

.Card{
    margin: 50px;
    padding: 10px;
    height: 100px;
    width: 90%;
    background-color: 837C6A;
    border-radius: 20px;
}

.Card h3{
    margin: 0.5px;
    padding: 10px;
    gap: 0.5px;
}

.Card > p{
    position: relative;
    left: 85%;
    top: -90%;
    font-weight: bolder;
    font-size: larger;
}


.button container{
    text-align: center;
    margin-right: -50px;
}

